Swiper is working, though still layout issues: - not centered - strange padding at left side

--- a/java/com.sap.sailing.gwt.ui/src/main/java/com/sap/sailing/gwt/home/client/shared/mainmedia/MainMedia.css
+++ b/java/com.sap.sailing.gwt.ui/src/main/java/com/sap/sailing/gwt/home/client/shared/mainmedia/MainMedia.css
@@ -2,28 +2,18 @@
   font-size: 15px;
   font-size: 1rem;
 }
-.media_photo {
-  width: 100%;
-  height: 100%;
-  -webkit-transition: margin 1s ease;
-  -moz-transition: margin 1s ease;
-  -o-transition: margin 1s ease;
-  -ms-transition: margin 1s ease;
-  transition: margin 1s ease;
-  position: absolute;
-  background-position: center center;
-  background-repeat: no-repeat;
-  cursor: pointer;
-}
-.media_slideshow {
-  position: relative;
+.media_swipecontainer {
   height: 550px;
   width: 830px;
   margin: 0 auto;
   overflow: hidden;
 }
-.media_slideshow_data {
-  display: none;
+.media_swipewrapper {
+}
+.media_swiperslide {
+}
+.media_photo {
+  cursor: pointer;
 }
 .media_slideshow_controls {
   position: absolute;
